# voxel

./: .clang-format  CMakeLists.txt  flake.nix
assets/shaders/: fragment.glsl  vertex.glsl
include/glad/: glad.c  glad.h
include/glad.bak/: glad.c
src/: camera.cpp  camera.h  chunk.cpp  chunk.h  chunk_pool.cpp  chunk_pool.h  main.cpp  program.cpp  program.h  shader.cpp  shader.h  texture.cpp  texture.h  vertex.h  world.cpp  world.h
